Fixed color contrast

--- a/styles/app.css
+++ b/styles/app.css
@@ -38,6 +38,7 @@ body {
     --nav-shadow: 0.02em 0.02em 0 rgba(100, 100, 255, 0.5), 0.05em 0.05em 0 rgba(70, 70, 70, 1);
     --nav-button: white;
     --nav-style: rgb(227, 227, 248);
+    --name-color: #555c64;
 }
 
 body.dark {
@@ -55,4 +56,5 @@ body.dark {
     --nav-bng: linear-gradient(39deg, rgb(29, 7, 64) 8.5%, rgb(253, 105, 139) 94.2%, black 1%);
     --nav-button: #060026;
     --nav-style: #5754af;
+    --name-color: #adbac7;
 }
